--- a/src/main/resources/view/customer-view.fxml
+++ b/src/main/resources/view/customer-view.fxml
@@ -6,18 +6,25 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="customerAnchorPane" prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.CustomerController">
+<AnchorPane fx:id="customerAnchorPane" prefHeight="720.0" prefWidth="1064.0" style="-fx-background-color: #d7dce2;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.CustomerController">
    <children>
-      <VBox alignment="CENTER" layoutX="24.0" layoutY="21.0" prefHeight="728.0" prefWidth="1129.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="720.0" fitWidth="1064.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/background.jpg" />
+         </image>
+      </ImageView>
+      <VBox alignment="CENTER" layoutX="44.0" layoutY="41.0" prefHeight="720.0" prefWidth="1064.0" stylesheets="@../css/customer.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1064.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="199.0" text="Customer Id" textFill="#819dbc">
+                  <Label fx:id="label1" prefHeight="30.0" prefWidth="150.0" text="Customer Id" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -29,27 +36,36 @@
                      <font>
                         <Font name="System Bold Italic" size="15.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </Label>
-                  <TextField fx:id="searchBar" prefHeight="26.0" prefWidth="447.0" promptText="search">
+                  <TextField fx:id="searchBar" prefHeight="26.0" prefWidth="388.0" promptText="search">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
                   </TextField>
                </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
             </HBox>
             <HBox layoutX="10.0" layoutY="10.0" prefHeight="46.0" prefWidth="1064.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1064.0">
                      <children>
-                        <Label prefHeight="22.0" prefWidth="199.0" text="Name" textFill="#819dbc">
+                        <Label fx:id="label2" prefHeight="22.0" prefWidth="150.0" text="Name" textFill="#819dbc">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtName" prefHeight="31.0" prefWidth="869.0" promptText="name" style="-fx-border-color: black; -fx-background-color: #27272d; -fx-border-width: 0 0 1px 0;">
+                        <TextField fx:id="txtName" prefHeight="31.0" prefWidth="590.0" promptText="name">
                            <font>
                               <Font size="14.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="30.0" />
+                           </HBox.margin>
                         </TextField>
                      </children>
                      <HBox.margin>
@@ -60,7 +76,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1064.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="199.0" text="Address" textFill="#819dbc">
+                  <Label fx:id="label3" prefHeight="22.0" prefWidth="150.0" text="Address" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -68,10 +84,13 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="txtAddress" prefHeight="26.0" prefWidth="874.0" promptText="address" style="-fx-border-color: black; -fx-background-color: #27272d; -fx-border-width: 0 0 1px 0;">
+                  <TextField fx:id="txtAddress" prefHeight="31.0" prefWidth="590.0" promptText="address">
                      <font>
                         <Font size="14.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </TextField>
                </children>
                <VBox.margin>
@@ -80,7 +99,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="102.0" prefHeight="46.0" prefWidth="1064.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="199.0" text="Email" textFill="#819dbc">
+                  <Label fx:id="label4" prefHeight="22.0" prefWidth="150.0" text="Email" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -88,16 +107,19 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="txtEmail" prefHeight="26.0" prefWidth="874.0" promptText="email@gmail.com" style="-fx-border-color: black; -fx-background-color: #27272d; -fx-border-width: 0 0 1px 0;">
+                  <TextField fx:id="txtEmail" prefHeight="26.0" prefWidth="590.0" promptText="email@gmail.com">
                      <font>
                         <Font size="14.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="148.0" prefHeight="46.0" prefWidth="1064.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="199.0" text="Phone Number" textFill="#819dbc">
+                  <Label fx:id="label5" prefHeight="22.0" prefWidth="150.0" text="Phone Number" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -105,16 +127,19 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="txtPhone" prefHeight="26.0" prefWidth="874.0" promptText="0000000000" style="-fx-background-color: #27272d; -fx-border-color: black; -fx-border-width: 0 0 1px 0;">
+                  <TextField fx:id="txtPhone" prefHeight="26.0" prefWidth="590.0" promptText="0000000000">
                      <font>
                         <Font size="14.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="194.0" prefHeight="51.0" prefWidth="1120.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="199.0" text="Nic" textFill="#819dbc">
+                  <Label fx:id="label6" prefHeight="22.0" prefWidth="150.0" text="Nic" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -122,16 +147,19 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="txtNic" prefHeight="26.0" prefWidth="874.0" promptText="000000000000" style="-fx-background-color: #27272d; -fx-border-color: black; -fx-border-width: 0 0 1px 0;">
+                  <TextField fx:id="txtNic" prefHeight="26.0" prefWidth="590.0" promptText="000000000000">
                      <font>
                         <Font size="14.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="1101.0">
                <children>
-                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#SaveCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #35068c;" text="Save" textFill="WHITE">
+                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#SaveCustomerOnAction" prefHeight="26.0" prefWidth="142.0" text="Save" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -139,28 +167,36 @@
                         <Insets left="30.0" right="150.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#updateCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #4f80b8;" text="Update" textFill="WHITE">
+                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#updateCustomerOnAction" prefHeight="26.0" prefWidth="142.0" text="Update" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                      <HBox.margin>
-                        <Insets right="150.0" />
+                        <Insets right="100.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #a63322;" text="Delete" textFill="WHITE">
+                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteCustomerOnAction" prefHeight="26.0" prefWidth="142.0" text="Delete" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                      <HBox.margin>
-                        <Insets right="150.0" />
+                        <Insets right="100.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #5e39a4;" text="Reset" textFill="WHITE">
+                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="142.0" text="Reset" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                      <HBox.margin>
-                        <Insets />
+                        <Insets right="100.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnSendMail" layoutX="916.0" layoutY="21.0" mnemonicParsing="false" onAction="#openSendMailModel" prefHeight="26.0" prefWidth="142.0" text="Send Mail" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="30.0" />
                      </HBox.margin>
                   </Button>
                </children>
@@ -168,15 +204,18 @@
                   <Insets />
                </VBox.margin>
             </HBox>
-            <TableView fx:id="customerTableView" onMouseClicked="#clickedTable" prefHeight="391.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
+            <TableView fx:id="customerTableView" onMouseClicked="#clickedTable" prefHeight="391.0" prefWidth="1120.0">
                <columns>
-                  <TableColumn fx:id="colId" prefWidth="109.0" text="Customer Id" />
-                  <TableColumn fx:id="colName" prefWidth="193.0" text="Name" />
-                  <TableColumn fx:id="colAddress" prefWidth="217.0" text="Address" />
-                  <TableColumn fx:id="colEmail" prefWidth="191.0" text="Email" />
-                  <TableColumn fx:id="colPhone" prefWidth="198.0" text="Phone Number" />
-                  <TableColumn fx:id="colNic" prefWidth="211.0" text="Nic" />
+                  <TableColumn fx:id="colId" prefWidth="146.0" text="Customer Id" />
+                  <TableColumn fx:id="colName" prefWidth="172.0" text="Name" />
+                  <TableColumn fx:id="colAddress" prefWidth="169.0" text="Address" />
+                  <TableColumn fx:id="colEmail" prefWidth="151.0" text="Email" />
+                  <TableColumn fx:id="colPhone" prefWidth="190.0" text="Phone Number" />
+                  <TableColumn fx:id="colNic" prefWidth="194.0" text="Nic" />
                </columns>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </VBox.margin>
             </TableView>
          </children>
       </VBox>
