--- a/src/main/resources/view/dash-board.fxml
+++ b/src/main/resources/view/dash-board.fxml
@@ -6,51 +6,31 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="dashboardAnchorPane" prefHeight="726.0" prefWidth="1280.0" style="-fx-background-color: #000101;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.DashBoardController">
+<AnchorPane fx:id="dashboardAnchorPane" prefHeight="726.0" prefWidth="1280.0" style="-fx-background-color: #000101;" stylesheets="@../css/dashboard.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.DashBoardController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutY="5.0" prefHeight="711.0" prefWidth="1283.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+      <ImageView fitHeight="726.0" fitWidth="1280.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/1.jpg" />
+         </image>
+      </ImageView>
+      <VBox alignment="TOP_CENTER" prefHeight="726.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="150.0" prefWidth="200.0">
-               <children>
-                  <Label prefHeight="80.0" prefWidth="254.0" text="Auto Rent Pro" textAlignment="CENTER" textFill="#b7bbbb">
-                     <font>
-                        <Font name="FreeSerif Bold" size="40.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets top="30.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="TOP_CENTER" prefHeight="224.0" prefWidth="1283.0">
-               <children>
-                  <ImageView fx:id="dashboardImage" fitHeight="546.0" fitWidth="812.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assets/dashboard.jpg" />
-                     </image>
-                  </ImageView>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_RIGHT" prefHeight="231.0" prefWidth="1280.0">
-               <children>
-                  <Button fx:id="btnSignin" mnemonicParsing="false" onAction="#SigninBtnOnAction" style="-fx-background-color: #b7bbbb;" text="Signin" textFill="#393c44">
-                     <font>
-                        <Font name="System Bold" size="24.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
+            <Label fx:id="topicLabel" alignment="CENTER" prefHeight="190.0" prefWidth="910.0" text="Auto Rent Pro" textAlignment="CENTER" textFill="#b7bbbb">
+               <font>
+                  <Font name="FreeSerif Bold" size="81.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnSignin" mnemonicParsing="false" onAction="#SigninBtnOnAction" style="-fx-background-color: #b7bbbb;" text="Signin" textFill="#393c44">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
                <VBox.margin>
-                  <Insets />
+                  <Insets top="420.0" />
                </VBox.margin>
-            </HBox>
-         </children>
-      </VBox>
+            </Button>
+         </children></VBox>
    </children>
 </AnchorPane>
