--- a/src/main/resources/view/home-page.fxml
+++ b/src/main/resources/view/home-page.fxml
@@ -2,62 +2,87 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="726.0" prefWidth="1280.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.HomePageController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.HomePageController">
    <children>
-      <VBox prefHeight="726.0" prefWidth="1280.0" style="-fx-border-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="720.0" fitWidth="232.0" layoutX="-8.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-8.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/3.jpg" />
+         </image>
+      </ImageView>
+      <VBox alignment="TOP_CENTER" layoutX="6.0" prefHeight="720.0" prefWidth="216.0" stylesheets="@../css/homePage.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1064.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="homeAnchorPane" prefHeight="726.0" prefWidth="1120.0">
-               <VBox.margin>
-                  <Insets left="158.0" />
-               </VBox.margin>
-            </AnchorPane>
-         </children>
-      </VBox>
-      <VBox alignment="TOP_CENTER" layoutX="-4.0" prefHeight="726.0" prefWidth="160.0" style="-fx-border-color: white; -fx-border-width: 1 1 1 1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#clickHomeButtonOnAction" prefHeight="26.0" prefWidth="89.0" text="Home">
+            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#clickHomeButtonOnAction" prefHeight="46.0" prefWidth="158.0" text="Home">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="40.0" />
+               </VBox.margin>
             </Button>
-            <Button fx:id="btnCustomer" mnemonicParsing="false" onAction="#customerOnaction" prefHeight="96.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Customer" textFill="WHITE">
+            <Button fx:id="btnCustomer" mnemonicParsing="false" onAction="#customerOnaction" prefHeight="46.0" prefWidth="158.0" text="Customer" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </Button>
-            <Button fx:id="btnVehicle" mnemonicParsing="false" onAction="#vehicleOnAction" prefHeight="100.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Vehicle" textFill="WHITE">
+            <Button fx:id="btnVehicle" mnemonicParsing="false" onAction="#vehicleOnAction" prefHeight="46.0" prefWidth="158.0" text="Vehicle" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </Button>
-            <Button fx:id="btnReservation" mnemonicParsing="false" onAction="#reservationOnAction" prefHeight="100.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Reservation" textFill="WHITE">
+            <Button fx:id="btnReservation" mnemonicParsing="false" onAction="#reservationOnAction" prefHeight="46.0" prefWidth="158.0" text="Reservation" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </Button>
-            <Button fx:id="btnPayment" mnemonicParsing="false" onAction="#paymentOnAction" prefHeight="100.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Payment" textFill="WHITE">
+            <Button fx:id="btnPayment" mnemonicParsing="false" onAction="#paymentOnAction" prefHeight="46.0" prefWidth="158.0" text="Payment" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </Button>
-            <Button fx:id="btnMAintenance" mnemonicParsing="false" onAction="#maintenanceOnAction" prefHeight="100.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Maintenance" textFill="WHITE">
+            <Button fx:id="btnMAintenance" mnemonicParsing="false" onAction="#maintenanceOnAction" prefHeight="46.0" prefWidth="158.0" text="Maintenance" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </Button>
-            <Button fx:id="btnMilage" mnemonicParsing="false" onAction="#mileageTrackingOnAction" prefHeight="100.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Mileage Track" textFill="WHITE">
+            <Button fx:id="btnMilage" mnemonicParsing="false" onAction="#mileageTrackingOnAction" prefHeight="46.0" prefWidth="158.0" text="Mileage Track" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </Button>
+            <ImageView fx:id="logoutImageView" fitHeight="48.0" fitWidth="41.0" onMousePressed="#clickOnLogOut" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/switch.png" />
+               </image>
+               <VBox.margin>
+                  <Insets top="80.0" />
+               </VBox.margin>
+            </ImageView>
          </children>
-         <padding>
-            <Insets top="20.0" />
-         </padding>
       </VBox>
+      <AnchorPane fx:id="homeAnchorPane" layoutX="216.0" prefHeight="720.0" prefWidth="1064.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="216.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
