--- a/src/main/resources/view/maintenance-main-view.fxml
+++ b/src/main/resources/view/maintenance-main-view.fxml
@@ -10,22 +10,27 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="maintenanceMainAnchorPane" prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.MaintenanceMainController">
+<AnchorPane fx:id="maintenanceMainAnchorPane" prefHeight="720.0" prefWidth="1064.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.MaintenanceMainController">
    <children>
-      <VBox layoutY="-1.0" prefHeight="726.0" prefWidth="1120.0">
+      <ImageView fitHeight="720.0" fitWidth="1064.0" layoutX="167.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/50.jpg" />
+         </image>
+      </ImageView>
+      <VBox layoutX="20.0" layoutY="19.0" prefHeight="720.0" prefWidth="1064.0" stylesheets="@../css/reservation.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER" prefHeight="127.0" prefWidth="1120.0">
                <children>
-                  <Label text="Vehicle Maintenance Records" textFill="WHITE">
+                  <Label fx:id="label1" text="Vehicle Maintenance Records" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="36.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="283.0" prefWidth="1120.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="320.0" prefWidth="1064.0">
                <children>
-                  <ImageView fitHeight="232.0" fitWidth="457.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image" fitHeight="232.0" fitWidth="457.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../assets/damage.jpeg" />
                      </image>
@@ -33,7 +38,7 @@
                         <Insets left="80.0" right="120.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView fitHeight="232.0" fitWidth="457.0" layoutX="10.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image" fitHeight="232.0" fitWidth="457.0" layoutX="10.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../assets/maintenance.jpeg" />
                      </image>
