--- a/src/main/resources/view/maintenance-records-history.fxml
+++ b/src/main/resources/view/maintenance-records-history.fxml
@@ -5,26 +5,33 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="recordHistoryAnchorPane" prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.MaintenanceRecordsHistoryController">
+<AnchorPane fx:id="recordHistoryAnchorPane" prefHeight="720.0" prefWidth="1064.0" style="-fx-background-color: #d7dce2;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.MaintenanceRecordsHistoryController">
    <children>
-      <VBox prefHeight="726.0" prefWidth="1120.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="720.0" fitWidth="1064.0" layoutX="14.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/background.jpg" />
+         </image>
+      </ImageView>
+      <VBox layoutX="20.0" layoutY="20.0" prefHeight="720.0" prefWidth="1064.0" stylesheets="@../css/customer.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox prefHeight="63.0" prefWidth="1120.0">
                <children>
-                  <Button fx:id="btnBack" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#navigateToMaintenanceRecordView" prefHeight="32.0" prefWidth="57.0" style="-fx-background-color: #27272d;" text="&lt;&lt;" textFill="WHITE">
+                  <Button fx:id="btnBack" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#navigateToMaintenanceRecordView" prefHeight="32.0" prefWidth="66.0" text="&lt;&lt;" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                      <HBox.margin>
-                        <Insets top="10.0" />
+                        <Insets left="30.0" top="10.0" />
                      </HBox.margin>
                   </Button>
-                  <TextField fx:id="txtSearchBar" prefHeight="26.0" prefWidth="371.0" promptText="search">
+                  <TextField fx:id="txtSearchBar" prefHeight="33.0" prefWidth="297.0" promptText="search">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
@@ -36,7 +43,7 @@
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="86.0" prefWidth="1120.0">
                <children>
-                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteOnAction" prefHeight="26.0" prefWidth="151.0" style="-fx-background-color: #a63322;" text="Delete" textFill="WHITE">
+                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteOnAction" prefHeight="26.0" prefWidth="151.0" text="Delete" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -44,7 +51,7 @@
                         <Insets right="700.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="151.0" style="-fx-background-color: #5e39a4;" text="Reset" textFill="WHITE">
+                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="151.0" text="Reset" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -53,16 +60,20 @@
             </HBox>
             <TableView fx:id="MaintenanceTable" onMouseClicked="#clickedTable" prefHeight="577.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
                <columns>
-                  <TableColumn fx:id="colId" prefWidth="133.0" text="Maintenance Id" />
-                  <TableColumn fx:id="colStartDate" prefWidth="130.0" text="Start Date" />
-                  <TableColumn fx:id="colEndDate" prefWidth="163.0" text="Completion Date" />
-                  <TableColumn fx:id="colVehicleId" prefWidth="142.0" text="Vehicle Id" />
-                  <TableColumn fx:id="colModel" prefWidth="129.0" text="Model" />
-                  <TableColumn fx:id="colDesc" prefWidth="150.0" text="Description" />
-                  <TableColumn fx:id="colStatus" prefWidth="153.0" text="Status" />
-                  <TableColumn fx:id="colAction" prefWidth="119.0" text="Action" />
+                  <TableColumn fx:id="colId" prefWidth="121.0" text="Maintenance Id" />
+                  <TableColumn fx:id="colStartDate" prefWidth="113.0" text="Start Date" />
+                  <TableColumn fx:id="colEndDate" prefWidth="114.0" text="Completion Date" />
+                  <TableColumn fx:id="colVehicleId" prefWidth="124.0" text="Vehicle Id" />
+                  <TableColumn fx:id="colModel" prefWidth="128.0" text="Model" />
+                  <TableColumn fx:id="colDesc" prefWidth="158.0" text="Description" />
+                  <TableColumn fx:id="colStatus" prefWidth="138.0" text="Status" />
+                  <TableColumn fx:id="colAction" prefWidth="125.0" text="Action" />
                </columns>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </VBox.margin>
             </TableView>
-         </children></VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
