--- a/src/main/resources/view/reservation-table.fxml
+++ b/src/main/resources/view/reservation-table.fxml
@@ -5,23 +5,30 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="reservationTableAnchorPane" prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.ReservationTableController">
+<AnchorPane fx:id="reservationTableAnchorPane" prefHeight="720.0" prefWidth="1064.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.ReservationTableController">
    <children>
-      <VBox layoutX="-1.0" prefHeight="726.0" prefWidth="1120.0">
+      <ImageView fitHeight="720.0" fitWidth="1064.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/background.jpg" />
+         </image>
+      </ImageView>
+      <VBox layoutX="19.0" layoutY="20.0" prefHeight="720.0" prefWidth="1064.0" stylesheets="@../css/customer.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox prefHeight="68.0" prefWidth="1085.0">
                <children>
-                  <Button fx:id="btnBack" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#navigateToVehicleView" prefHeight="32.0" prefWidth="57.0" style="-fx-background-color: #27272d;" text="&lt;&lt;" textFill="WHITE">
+                  <Button fx:id="btnBack" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#navigateToVehicleView" prefHeight="32.0" prefWidth="57.0" text="&lt;&lt;" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                      <HBox.margin>
-                        <Insets top="10.0" />
+                        <Insets left="30.0" top="10.0" />
                      </HBox.margin>
                   </Button>
                   <TextField fx:id="searchBar" prefHeight="26.0" prefWidth="488.0" promptText="search">
@@ -36,7 +43,7 @@
             </HBox>
             <HBox prefHeight="59.0" prefWidth="1085.0">
                <children>
-                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteOnAction" prefHeight="26.0" prefWidth="151.0" style="-fx-background-color: #a63322;" text="Delete" textFill="WHITE">
+                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteOnAction" prefHeight="26.0" prefWidth="151.0" text="Delete" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -44,7 +51,7 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="151.0" style="-fx-background-color: #5e39a4;" text="Reset" textFill="WHITE">
+                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="151.0" text="Reset" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -52,20 +59,23 @@
                         <Insets left="700.0" />
                      </HBox.margin>
                   </Button>
-               </children></HBox>
+               </children>
+            </HBox>
             <TableView fx:id="reservationTable" onMouseClicked="#clickedTable" prefHeight="632.0" prefWidth="1085.0" style="-fx-background-color: #a0b5c9;">
                <columns>
-                  <TableColumn fx:id="colReservationId" prefWidth="99.0" text="Reservation Id" />
-                  <TableColumn fx:id="colReservationDate" prefWidth="117.0" text="Reservation Date" />
-                  <TableColumn fx:id="colCustomer" prefWidth="111.0" text=" Customer" />
-                  <TableColumn fx:id="colVehicleId" prefWidth="105.0" text="Number Plate" />
-                  <TableColumn fx:id="colModel" prefWidth="93.0" text="Model" />
-                  <TableColumn fx:id="colStartDate" prefWidth="107.0" text="Start Date" />
-                  <TableColumn fx:id="colEndDate" prefWidth="121.0" text="End Date" />
+                  <TableColumn fx:id="colReservationId" prefWidth="108.0" text="Reservation Id" />
+                  <TableColumn fx:id="colReservationDate" prefWidth="115.0" text="Reservation Date" />
+                  <TableColumn fx:id="colCustomer" prefWidth="114.0" text=" Customer" />
+                  <TableColumn fx:id="colVehicleId" prefWidth="140.0" text="Number Plate" />
+                  <TableColumn fx:id="colModel" prefWidth="116.0" text="Model" />
                   <TableColumn fx:id="colPrice" prefWidth="116.0" text="Price" />
-                  <TableColumn fx:id="colStatus" prefWidth="106.0" text=" Status" />
-                  <TableColumn fx:id="colAction" prefWidth="109.0" text="Action" />
+                  <TableColumn fx:id="colStatus" prefWidth="104.0" text=" Status" />
+                  <TableColumn fx:id="colAction" prefWidth="105.0" text="Action" />
+                  <TableColumn fx:id="colAddMileage" prefWidth="100.0" text="Add Milege" />
                </columns>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
+               </VBox.margin>
             </TableView>
          </children>
       </VBox>
