--- a/src/main/resources/view/vehicle-damage-view.fxml
+++ b/src/main/resources/view/vehicle-damage-view.fxml
@@ -8,18 +8,25 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.VehicleDamageController">
+<AnchorPane fx:id="damageAnchorPAne" prefHeight="720.0" prefWidth="1064.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.VehicleDamageController">
    <children>
-      <VBox prefHeight="726.0" prefWidth="1120.0">
+      <ImageView fitHeight="720.0" fitWidth="1064.0" layoutX="50.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../assets/background.jpg" />
+         </image>
+      </ImageView>
+      <VBox layoutX="20.0" layoutY="20.0" prefHeight="720.0" prefWidth="1064.0" stylesheets="@../css/customer.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="49.0" prefWidth="1120.0">
                <children>
-                  <Label prefHeight="24.0" prefWidth="199.0" text="Damage Id" textFill="#819dbc">
+                  <Label fx:id="lblId" layoutX="40.0" layoutY="28.0" prefHeight="24.0" prefWidth="445.0" text="1" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
@@ -27,47 +34,27 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="lblId" layoutX="40.0" layoutY="28.0" prefHeight="24.0" prefWidth="406.0" text="1" textFill="WHITE">
+                  <Label fx:id="lblDate" layoutX="40.0" layoutY="23.0" prefHeight="30.0" prefWidth="177.0" text="date" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </Label>
-                  <TextField fx:id="txtSearchBar" prefHeight="26.0" prefWidth="355.0" promptText="search">
+                  <TextField fx:id="txtSearchBar" prefHeight="33.0" prefWidth="275.0" promptText="search">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="80.0" right="20.0" />
+                     </HBox.margin>
                   </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="45.0" prefWidth="1120.0">
-               <children>
-                  <Label prefHeight="24.0" prefWidth="199.0" text="Reported Date" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <TextField fx:id="txtDate" prefHeight="26.0" prefWidth="226.0" promptText="YYYY/MM/DD" style="-fx-background-color: #27272d; -fx-border-color: white; -fx-border-width: 0 0 1;" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="59.0" prefHeight="49.0" prefWidth="1120.0">
-               <children>
-                  <Label prefHeight="24.0" prefWidth="199.0" text="Repair Cost" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <TextField fx:id="txtCost" prefHeight="26.0" prefWidth="226.0" style="-fx-background-color: #27272d; -fx-border-color: white; -fx-border-width: 0 0 1;" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="108.0" prefHeight="68.0" prefWidth="1120.0">
                <children>
-                  <Label prefHeight="24.0" prefWidth="199.0" text="Vehicle Id" textFill="#819dbc">
+                  <Label fx:id="label" prefHeight="30.0" prefWidth="75.0" text="Vehcile" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
@@ -75,40 +62,11 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <ComboBox fx:id="cmbVehicleId" onAction="#selectVehicleId" prefHeight="26.0" prefWidth="172.0" />
-                  <Label layoutX="40.0" layoutY="23.0" prefHeight="24.0" prefWidth="130.0" text="Model" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
+                  <ComboBox fx:id="cmbVehicleId" onAction="#selectVehicleId" prefHeight="16.0" prefWidth="172.0">
                      <HBox.margin>
-                        <Insets left="80.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label fx:id="lblModel" layoutX="491.0" layoutY="23.0" prefHeight="24.0" prefWidth="173.0" text="model" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="491.0" layoutY="23.0" prefHeight="24.0" prefWidth="116.0" text="Customer" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblCustomerId" layoutX="831.0" layoutY="23.0" prefHeight="24.0" prefWidth="99.0" text="id" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblCustomerName" layoutX="910.0" layoutY="23.0" prefHeight="24.0" prefWidth="99.0" text="name" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="59.0" prefHeight="98.0" prefWidth="1120.0">
-               <children>
-                  <Label prefHeight="24.0" prefWidth="199.0" text="Description" textFill="#819dbc">
+                        <Insets left="30.0" />
+                     </HBox.margin></ComboBox>
+                  <Label fx:id="lblModel" layoutX="40.0" layoutY="23.0" prefHeight="32.0" prefWidth="276.0" text="Model" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="17.0" />
                      </font>
@@ -116,12 +74,70 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <TextArea fx:id="txtAreaDesc" prefHeight="114.0" prefWidth="855.0" />
+                  <Label fx:id="label" layoutX="491.0" layoutY="23.0" prefHeight="30.0" prefWidth="98.0" text="Customer" textFill="#819dbc">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ComboBox fx:id="cmbCustomerName" layoutX="156.0" layoutY="28.0" onAction="#selectCustomerName" prefHeight="26.0" prefWidth="172.0">
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin></ComboBox>
+                  <Label fx:id="lblCustomerId" layoutX="910.0" layoutY="23.0" prefHeight="24.0" prefWidth="99.0" text="id" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="59.0" prefHeight="49.0" prefWidth="1120.0">
+               <children>
+                  <Label fx:id="label" prefHeight="30.0" prefWidth="114.0" text="Repair Cost" textFill="#819dbc">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="txtCost" prefHeight="26.0" prefWidth="226.0">
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="59.0" prefHeight="112.0" prefWidth="1120.0">
+               <children>
+                  <Label fx:id="label" prefHeight="30.0" prefWidth="105.0" text="Description" textFill="#819dbc">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextArea fx:id="txtAreaDesc" prefHeight="98.0" prefWidth="836.0">
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin></TextArea>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="1120.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="51.0" prefWidth="1120.0">
                <children>
-                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#SaveOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #35068c;" text="Save" textFill="WHITE">
+                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#SaveOnAction" prefHeight="26.0" prefWidth="142.0" text="Save" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -129,7 +145,7 @@
                         <Insets left="60.0" right="150.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#updateOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #4f80b8;" text="Update" textFill="WHITE">
+                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#updateOnAction" prefHeight="26.0" prefWidth="142.0" text="Update" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -137,7 +153,7 @@
                         <Insets right="150.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #a63322;" text="Delete" textFill="WHITE">
+                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteOnAction" prefHeight="26.0" prefWidth="142.0" text="Delete" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -145,17 +161,20 @@
                         <Insets right="150.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #5e39a4;" text="Reset" textFill="WHITE">
+                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="142.0" text="Reset" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                      <HBox.margin>
-                        <Insets />
+                        <Insets right="30.0" />
                      </HBox.margin>
                   </Button>
                </children>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
             </HBox>
-            <TableView fx:id="DamageRecordsTable" onMouseClicked="#clickedTable" prefHeight="416.0" prefWidth="1123.0" style="-fx-background-color: #a0b5c9;">
+            <TableView fx:id="DamageRecordsTable" onMouseClicked="#clickedTable" prefHeight="418.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
                <columns>
                   <TableColumn fx:id="colDamageId" prefWidth="120.0" text="Damage Id" />
                   <TableColumn fx:id="colDate" prefWidth="99.0" text="Reported Date" />
@@ -166,6 +185,9 @@
                   <TableColumn fx:id="colCustomerName" prefWidth="159.0" text="Customer Name" />
                   <TableColumn fx:id="colDesc" prefWidth="218.0" text="Description" />
                </columns>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
             </TableView>
          </children>
       </VBox>
