--- a/src/main/resources/view/newReservation.fxml
+++ b/src/main/resources/view/newReservation.fxml
@@ -148,7 +148,11 @@
                         <HBox alignment="CENTER" layoutX="11.0" layoutY="86.0" prefHeight="62.0" prefWidth="319.0">
                            <children>
                               <Label fx:id="label5" prefHeight="30.0" prefWidth="151.0" text="Full Payment" />
-                              <TextField fx:id="txtfullPayment" onKeyReleased="#selctFullPaymentField" prefHeight="32.0" prefWidth="146.0" />
+                              <Label fx:id="txtfullPayment" prefHeight="31.0" prefWidth="141.0" text="0.00" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="195.0" prefWidth="319.0">
