--- a/src/main/resources/css/loginPage.css
+++ b/src/main/resources/css/loginPage.css
@@ -15,8 +15,9 @@
     -fx-effect: dropshadow(gaussian, black, 3, 1, 0, 0); /* Black border effect */
 }
 
+
 /* TextFields and PasswordFields */
-#txtUserName,
+#txtUserName,#txtConfirmPw, #txtEMail,
 #txtPassword{
     -fx-background-color: white;
     -fx-background-radius: 20;
@@ -28,9 +29,9 @@
 
 }
 
-#txtUserName:hover,
+#txtUserName:hover, #txtConfirmPw:hover, #txtEMail:hover,
 #txtPassword:hover{
-    -fx-background-color:  #fff; /* Red background on hover */
+    -fx-background-color:  #fff;
     -fx-text-fill: black; /* White text on hover */
     -fx-scale-x: 1.05;
     -fx-scale-y: 1.05;
@@ -67,7 +68,16 @@
     -fx-scale-y: 0.95;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 2, 0, 1, 1); /* Subtle shadow reduction */
 }
-
+#btnForgetPw{
+    -fx-background-color: transparent; /* White background */
+    -fx-text-fill:  red; /* Bold red font color */
+    -fx-font-family: "Arial Bold";
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+    -fx-effect: dropshadow(gaussian, black, 2, 0, 2, 2);
+    -fx-transition: all 0.3s ease;
+}
 
 
 #btnClose {
