--- a/src/main/resources/view/bill-view.fxml
+++ b/src/main/resources/view/bill-view.fxml
@@ -7,14 +7,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.GenerateBillController">
    <children>
       <VBox layoutX="11.0" layoutY="11.0" prefHeight="576.0" prefWidth="575.0" style="-fx-border-color: blue; -fx-border-width: 2 2 2 2;" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="11.0">
          <children>
             <HBox alignment="CENTER" prefHeight="45.0" prefWidth="574.0">
                <children>
-                  <Label text="Invoice" />
+                  <Label text="Invoice">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font></Label>
                </children>
             </HBox>
             <HBox alignment="CENTER_RIGHT" layoutX="12.0" layoutY="12.0" prefHeight="25.0" prefWidth="574.0">
@@ -28,22 +30,31 @@
             </HBox>
             <HBox alignment="CENTER" layoutX="12.0" layoutY="12.0" prefHeight="45.0" prefWidth="574.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="124.0" text="Reservation Id :" />
+                  <Label prefHeight="18.0" prefWidth="124.0" text="Reservation Id :">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font></Label>
                   <Label fx:id="lblReservationId" layoutX="250.0" layoutY="24.0" prefHeight="18.0" prefWidth="106.0" text="id" />
                   <Label layoutX="297.0" layoutY="24.0" prefHeight="18.0" prefWidth="109.0" text="Payment Id :">
                      <HBox.margin>
                         <Insets left="50.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblPaymentId" layoutX="345.0" layoutY="24.0" prefHeight="18.0" prefWidth="100.0" text="id" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="12.0" layoutY="12.0" prefHeight="45.0" prefWidth="574.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="153.0" text="Estimated Mileage ">
+                  <Label prefHeight="20.0" prefWidth="174.0" text="Estimated Mileage ">
                      <HBox.margin>
                         <Insets left="150.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblEstimatedMileage" layoutX="239.0" layoutY="24.0" prefHeight="18.0" prefWidth="103.0" text="mile">
                      <HBox.margin>
@@ -57,10 +68,13 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="12.0" layoutY="127.0" prefHeight="45.0" prefWidth="574.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="153.0" text="Actual Mileage">
+                  <Label prefHeight="20.0" prefWidth="174.0" text="Actual Mileage">
                      <HBox.margin>
                         <Insets left="150.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblActualMileage" layoutX="239.0" layoutY="24.0" prefHeight="18.0" prefWidth="141.0" text="mile">
                      <HBox.margin>
@@ -71,10 +85,13 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="12.0" layoutY="172.0" prefHeight="45.0" prefWidth="574.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="151.0" text="Estimated Mileage Cost">
+                  <Label prefHeight="20.0" prefWidth="173.0" text="Estimated Mileage Cost">
                      <HBox.margin>
                         <Insets left="150.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblEstimatedMileageCost" layoutX="239.0" layoutY="24.0" prefHeight="18.0" prefWidth="132.0" text="0.00">
                      <HBox.margin>
@@ -85,10 +102,13 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="12.0" layoutY="262.0" prefHeight="45.0" prefWidth="574.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="151.0" text="Extra Charges Per Km ">
+                  <Label prefHeight="18.0" prefWidth="170.0" text="Extra Charges Per Km ">
                      <HBox.margin>
                         <Insets left="150.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblExtraChargesPerKm" layoutX="239.0" layoutY="24.0" prefHeight="18.0" prefWidth="132.0" text="0.00">
                      <HBox.margin>
@@ -103,6 +123,9 @@
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblTotalExtraCharges" alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="192.0" text="0.00" />
                </children>
@@ -113,6 +136,9 @@
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lblDamageCost" alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="192.0" text="0.00" />
                </children>
@@ -133,6 +159,9 @@
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                   <Label fx:id="lbladvancePayment" alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="192.0" text="0.00" />
                </children>
